test: update tests to new junit version