@@ -1,7 +1,7 @@
 package org.pakicek.parser;
 
-import org.junit.Test;
-import static org.junit.Assert.*;
+import org.junit.jupiter.api.Test;
+import static org.junit.jupiter.api.Assertions.*;
 
 import org.pakicek.parser.ast.node.*;
 import org.pakicek.parser.ast.node.expression.*;
@@ -43,8 +43,8 @@ public class ParserTest {
         assertNotNull(program.getMainNode());
         assertEquals(1, program.getMainNode().getBody().getStatements().size());
 
-        ExpressionStatementNode stmt = (ExpressionStatementNode) program.getMainNode().getBody().getStatements().get(0);
-        assertTrue(stmt.getExpression() instanceof FunctionCallNode);
+        ExpressionStatementNode stmt = (ExpressionStatementNode) program.getMainNode().getBody().getStatements().getFirst();
+        assertInstanceOf(FunctionCallNode.class, stmt.getExpression());
     }
 
     @Test
@@ -60,11 +60,11 @@ public class ParserTest {
         ProgramNode program = parser.parse();
 
         assertEquals(1, program.getFunctions().size());
-        FunctionDeclarationNode function = program.getFunctions().get(0);
+        FunctionDeclarationNode function = program.getFunctions().getFirst();
         assertEquals("factorial", function.getName());
         assertEquals("int", ((BasicTypeNode) function.getReturnType()).getTypeName());
         assertEquals(1, function.getParameters().size());
-        assertEquals("n", function.getParameters().get(0).getName());
+        assertEquals("n", function.getParameters().getFirst().getName());
     }
 
     @Test
@@ -82,12 +82,12 @@ public class ParserTest {
         parser = new Parser(tokens);
         ProgramNode program = parser.parse();
 
-        FunctionDeclarationNode function = program.getFunctions().get(0);
+        FunctionDeclarationNode function = program.getFunctions().getFirst();
         BlockStatementNode body = function.getBody();
         assertEquals(4, body.getStatements().size());
 
-        assertTrue(body.getStatements().get(0) instanceof VariableDeclarationNode);
-        VariableDeclarationNode varA = (VariableDeclarationNode) body.getStatements().get(0);
+        assertInstanceOf(VariableDeclarationNode.class, body.getStatements().getFirst());
+        VariableDeclarationNode varA = (VariableDeclarationNode) body.getStatements().getFirst();
         assertEquals("a", varA.getName());
         assertNull(varA.getInitialValue());
 
@@ -110,28 +110,28 @@ public class ParserTest {
         parser = new Parser(tokens);
         ProgramNode program = parser.parse();
 
-        FunctionDeclarationNode function = program.getFunctions().get(0);
+        FunctionDeclarationNode function = program.getFunctions().getFirst();
         BlockStatementNode body = function.getBody();
 
-        VariableDeclarationNode fixedArray = (VariableDeclarationNode) body.getStatements().get(0);
-        assertTrue(fixedArray.getType() instanceof ArrayTypeNode);
+        VariableDeclarationNode fixedArray = (VariableDeclarationNode) body.getStatements().getFirst();
+        assertInstanceOf(ArrayTypeNode.class, fixedArray.getType());
         ArrayTypeNode fixedType = (ArrayTypeNode) fixedArray.getType();
-        assertTrue("Should be fixed size", fixedType.isFixedSize());
+        assertTrue(fixedType.isFixedSize(), "Should be fixed size");
         assertEquals(5, fixedType.getFixedSize().intValue());
-        assertNull("Should not have size expression", fixedType.getSizeExpression());
+        assertNull(fixedType.getSizeExpression(), "Should not have size expression");
 
         VariableDeclarationNode dynamicArray = (VariableDeclarationNode) body.getStatements().get(1);
         ArrayTypeNode dynamicType = (ArrayTypeNode) dynamicArray.getType();
-        assertTrue("Should be dynamic size", dynamicType.isDynamicSize());
-        assertNotNull("Should have size expression", dynamicType.getSizeExpression());
-        assertNull("Should not have fixed size", dynamicType.getFixedSize());
+        assertTrue(dynamicType.isDynamicSize(), "Should be dynamic size");
+        assertNotNull(dynamicType.getSizeExpression(), "Should have size expression");
+        assertNull(dynamicType.getFixedSize(), "Should not have fixed size");
 
         VariableDeclarationNode noSizeArray = (VariableDeclarationNode) body.getStatements().get(2);
         ArrayTypeNode noSizeType = (ArrayTypeNode) noSizeArray.getType();
-        assertFalse("Should not be fixed size", noSizeType.isFixedSize());
-        assertFalse("Should not be dynamic size", noSizeType.isDynamicSize());
-        assertNull("Should not have fixed size", noSizeType.getFixedSize());
-        assertNull("Should not have size expression", noSizeType.getSizeExpression());
+        assertFalse(noSizeType.isFixedSize(), "Should not be fixed size");
+        assertFalse(noSizeType.isDynamicSize(), "Should not be dynamic size");
+        assertNull(noSizeType.getFixedSize(),"Should not have fixed size");
+        assertNull(noSizeType.getSizeExpression(), "Should not have size expression");
     }
 
     @Test
@@ -160,23 +160,23 @@ public class ParserTest {
         parser = new Parser(tokens);
         ProgramNode program = parser.parse();
 
-        FunctionDeclarationNode function = program.getFunctions().get(0);
+        FunctionDeclarationNode function = program.getFunctions().getFirst();
         BlockStatementNode body = function.getBody();
 
-        assertTrue(body.getStatements().get(0) instanceof IfStatementNode);
-        IfStatementNode ifStmt = (IfStatementNode) body.getStatements().get(0);
+        assertInstanceOf(IfStatementNode.class, body.getStatements().getFirst());
+        IfStatementNode ifStmt = (IfStatementNode) body.getStatements().getFirst();
         assertNotNull(ifStmt.getCondition());
         assertNotNull(ifStmt.getThenBlock());
         assertEquals(1, ifStmt.getElifBranches().size());
         assertNotNull(ifStmt.getElseBlock());
 
-        assertTrue(body.getStatements().get(1) instanceof ForLoopNode);
+        assertInstanceOf(ForLoopNode.class, body.getStatements().get(1));
         ForLoopNode forLoop = (ForLoopNode) body.getStatements().get(1);
         assertNotNull(forLoop.getInitialization());
         assertNotNull(forLoop.getCondition());
         assertNotNull(forLoop.getUpdate());
 
-        assertTrue(body.getStatements().get(2) instanceof WhileLoopNode);
+        assertInstanceOf(WhileLoopNode.class, body.getStatements().get(2));
         WhileLoopNode whileLoop = (WhileLoopNode) body.getStatements().get(2);
         assertNotNull(whileLoop.getCondition());
     }
@@ -193,9 +193,9 @@ public class ParserTest {
         parser = new Parser(tokens);
         ProgramNode program = parser.parse();
 
-        FunctionDeclarationNode function = program.getFunctions().get(0);
-        ReturnStatementNode returnStmt = (ReturnStatementNode) function.getBody().getStatements().get(0);
-        assertTrue(returnStmt.getValue() instanceof BinaryExpressionNode);
+        FunctionDeclarationNode function = program.getFunctions().getFirst();
+        ReturnStatementNode returnStmt = (ReturnStatementNode) function.getBody().getStatements().getFirst();
+        assertInstanceOf(BinaryExpressionNode.class, returnStmt.getValue());
     }
 
     @Test
@@ -213,17 +213,17 @@ public class ParserTest {
         parser = new Parser(tokens);
         ProgramNode program = parser.parse();
 
-        FunctionDeclarationNode function = program.getFunctions().get(0);
+        FunctionDeclarationNode function = program.getFunctions().getFirst();
         BlockStatementNode body = function.getBody();
 
-        assertTrue(body.getStatements().get(0) instanceof ExpressionStatementNode);
-        ExpressionStatementNode exprStmt1 = (ExpressionStatementNode) body.getStatements().get(0);
-        assertTrue(exprStmt1.getExpression() instanceof AssignmentNode);
+        assertInstanceOf(ExpressionStatementNode.class, body.getStatements().getFirst());
+        ExpressionStatementNode exprStmt1 = (ExpressionStatementNode) body.getStatements().getFirst();
+        assertInstanceOf(AssignmentNode.class, exprStmt1.getExpression());
 
         for (int i = 1; i < 3; i++) {
-            assertTrue(body.getStatements().get(i) instanceof ExpressionStatementNode);
+            assertInstanceOf(ExpressionStatementNode.class, body.getStatements().get(i));
             ExpressionStatementNode exprStmt = (ExpressionStatementNode) body.getStatements().get(i);
-            assertTrue(exprStmt.getExpression() instanceof FunctionCallNode);
+            assertInstanceOf(FunctionCallNode.class, exprStmt.getExpression());
         }
     }
 
@@ -241,22 +241,22 @@ public class ParserTest {
         parser = new Parser(tokens);
         ProgramNode program = parser.parse();
 
-        FunctionDeclarationNode function = program.getFunctions().get(0);
+        FunctionDeclarationNode function = program.getFunctions().getFirst();
         BlockStatementNode body = function.getBody();
 
-        assertTrue(body.getStatements().get(0) instanceof VariableDeclarationNode);
+        assertInstanceOf(VariableDeclarationNode.class, body.getStatements().get(0));
 
-        assertTrue(body.getStatements().get(1) instanceof ExpressionStatementNode);
+        assertInstanceOf(ExpressionStatementNode.class, body.getStatements().get(1));
         ExpressionStatementNode assignStmt = (ExpressionStatementNode) body.getStatements().get(1);
-        assertTrue(assignStmt.getExpression() instanceof AssignmentNode);
+        assertInstanceOf(AssignmentNode.class, assignStmt.getExpression());
         AssignmentNode assignment = (AssignmentNode) assignStmt.getExpression();
-        assertTrue(assignment.getTarget() instanceof ArrayAccessNode);
+        assertInstanceOf(ArrayAccessNode.class, assignment.getTarget());
 
-        assertTrue(body.getStatements().get(2) instanceof ExpressionStatementNode);
+        assertInstanceOf(ExpressionStatementNode.class, body.getStatements().get(2));
         ExpressionStatementNode accessStmt = (ExpressionStatementNode) body.getStatements().get(2);
-        assertTrue(accessStmt.getExpression() instanceof AssignmentNode);
+        assertInstanceOf(AssignmentNode.class, accessStmt.getExpression());
         AssignmentNode access = (AssignmentNode) accessStmt.getExpression();
-        assertTrue(access.getValue() instanceof ArrayAccessNode);
+        assertInstanceOf(ArrayAccessNode.class, access.getValue());
     }
 
     @Test
@@ -274,18 +274,18 @@ public class ParserTest {
         parser = new Parser(tokens);
         ProgramNode program = parser.parse();
 
-        FunctionDeclarationNode function = program.getFunctions().get(0);
+        FunctionDeclarationNode function = program.getFunctions().getFirst();
         BlockStatementNode body = function.getBody();
 
         for (int i = 0; i < 4; i++) {
-            assertTrue("Statement " + i + " should be ExpressionStatement", body.getStatements().get(i) instanceof ExpressionStatementNode);
+            assertInstanceOf(ExpressionStatementNode.class, body.getStatements().get(i), "Statement " + i + " should be ExpressionStatement");
             ExpressionStatementNode stmt = (ExpressionStatementNode) body.getStatements().get(i);
-            assertTrue("Expression in statement " + i + " should be AssignmentNode", stmt.getExpression() instanceof AssignmentNode);
+            assertInstanceOf(AssignmentNode.class, stmt.getExpression(), "Expression in statement " + i + " should be AssignmentNode");
         }
 
         ExpressionStatementNode chainedStmt = (ExpressionStatementNode) body.getStatements().get(3);
         AssignmentNode chained = (AssignmentNode) chainedStmt.getExpression();
-        assertTrue(chained.getValue() instanceof AssignmentNode);
+        assertInstanceOf(AssignmentNode.class, chained.getValue());
     }
 
     @Test
@@ -308,7 +308,7 @@ public class ParserTest {
 
         MainNode main = program.getMainNode();
         assertEquals(1, main.getBody().getStatements().size());
-        assertTrue(main.getBody().getStatements().get(0) instanceof IfStatementNode);
+        assertInstanceOf(IfStatementNode.class, main.getBody().getStatements().getFirst());
     }
 
     @Test
@@ -323,11 +323,11 @@ public class ParserTest {
         parser = new Parser(tokens);
         ProgramNode program = parser.parse();
 
-        FunctionDeclarationNode function = program.getFunctions().get(0);
-        ReturnStatementNode returnStmt = (ReturnStatementNode) function.getBody().getStatements().get(0);
+        FunctionDeclarationNode function = program.getFunctions().getFirst();
+        ReturnStatementNode returnStmt = (ReturnStatementNode) function.getBody().getStatements().getFirst();
 
-        assertTrue(returnStmt.getValue() instanceof BinaryExpressionNode);
+        assertInstanceOf(BinaryExpressionNode.class, returnStmt.getValue());
         BinaryExpressionNode binaryExpr = (BinaryExpressionNode) returnStmt.getValue();
-        assertTrue(binaryExpr.getLeft() instanceof AssignmentNode);
+        assertInstanceOf(AssignmentNode.class, binaryExpr.getLeft());
     }
 }
